[FIX] 11615: In Legend align some text

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -45,3 +45,7 @@
 .customItemPaddingTop0_25Rem.sapMVBox>.sapMFlexItem {
     padding-top: 0.25rem !important;
 }
+
+.customTextAlignCenter {
+	text-align: center !important;
+}
